--- a/css/site.css
+++ b/css/site.css
@@ -10,11 +10,11 @@ body {
 }
 
 nav {
-    background-color: var(--dark-color);
+    background-color: var(--primary-color);
 }
 
 footer {
-    background-color: var(--dark-color);
+    background-color: var(--primary-color);
     padding-right: 1rem;
 }
 
